// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-maskedfield Default 1`] = `
<div
  class="m-maskedlfield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m-maskedfield__input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              id="mMaskedfield-fakeId"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-maskedfield__validation"
  >
    <div
      class="m-validation-message m-maskedfield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-maskedfield Default Story 1`] = `
<div
  class="m-maskedlfield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m-maskedfield__input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              id="mMaskedfield-fakeId"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-maskedfield__validation"
  >
    <div
      class="m-validation-message m-maskedfield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-maskedfield Postal Code Mask 1`] = `
<div
  class="m-maskedlfield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m-maskedfield__input-style m--has-value m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              id="mMaskedfield-fakeId"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-maskedfield__validation"
  >
    <div
      class="m-validation-message m-maskedfield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-maskedfield Postal Code Mask With Label 1`] = `
<div
  class="m-maskedlfield m--has-label"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m-maskedfield__input-style m--is-label-up m--has-label m--has-value m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mMaskedfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Postal code
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
             
            <input
              id="mMaskedfield-fakeId"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-maskedfield__validation"
  >
    <div
      class="m-validation-message m-maskedfield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-maskedfield Postal Code Mask With Label In Error 1`] = `
<div
  class="m-maskedlfield m--has-error m--has-label m--has-validation-message"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m-maskedfield__input-style m--is-label-up m--has-error m--has-label m--has-value m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mMaskedfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Postal code
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
             
            <input
              id="mMaskedfield-fakeId"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-maskedfield__validation"
  >
    <div
      class="m-validation-message m-maskedfield__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Invalid postal code with a long long long long long message error
        </span>
      </p>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-maskedfield Telephone Mask 1`] = `
<div
  class="m-maskedlfield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m-maskedfield__input-style m--has-value m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              id="mMaskedfield-fakeId"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-maskedfield__validation"
  >
    <div
      class="m-validation-message m-maskedfield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
